# em

./: .gitignore  AUTHORS  CHANGES  Makefile  Makefile.in  NEWS  PLAN.md  README  config.h  config.h.in  config.status  configure  configure.ac
.github/workflows/: dist.yml
doc/: Makefile  Makefile.am  Makefile.in  em.1  emhelp
src/: Makefile  Makefile.am  Makefile.in  em  em1.c  em2.c
src/.deps/: em1.Po  em2.Po
